--- a/index.html
+++ b/index.html
@@ -46,7 +46,20 @@
                             <input type="text" placeholder="1/10/2010" id="datetime"/>
                         </li>
                         <li class="list-group-item bg-dark">
-                            <button id="filter-btn" type="button" class="btn btn-dark">Filter Table</button>
+                            <label for="city">Enter a City</label><br/>
+                            <input type="text" placeholder="city" id="city"/>
+                        </li>
+                        <li class="list-group-item bg-dark">
+                            <label for="state">Enter a State</label><br/>
+                            <input type="text" placeholder="state" id="state"/>
+                        </li>
+                        <li class="list-group-item bg-dark">
+                            <label for="country">Enter a Country</label><br/>
+                            <input type="text" placeholder="country" id="country"/>
+                        </li>
+                        <li class="list-group-item bg-dark">
+                            <label for="shape">Enter a Shape</label><br/>
+                            <input type="text" placeholder="shape" id="shape"/>
                         </li>
                     </ul>
                 </form>
